# nanai-gna

./: .gitmodules  Cargo.toml  Makefile.toml  README.md  build.rs
doc/: implementation.md  intel_gna_porting_diff.md
examples/: Cargo.toml  load_test.rs  request_state.rs  usage_report.rs
gna-rs/: Cargo.toml  README.md
gna-rs/src/: lib.rs
gna-rs/src/common/: address.rs  gna_drm.rs  gna_drv_api.rs  gna_exception.rs  gna_h_wrapper.rs  macros.rs  mod.rs  profiler.rs  resource.rs
gna-rs/src/gna_api/: gna2_api.rs  gna2_capability_api.rs  gna2_common_api.rs  gna2_device_api.rs  gna2_inference_api.rs  gna2_instrumentation_api.rs  gna2_memory_api.rs  gna2_mod.rs  gna2_model_api.rs  gna2_model_export_api.rs  gna2_suecreek_header.rs  gna2_types.rs  mod.rs
gna-rs/src/gna_lib/: acceleration_detector.rs  activation_function.rs  activation_helper.rs  active_list.rs  affine_functions.rs  affine_layer_capabilities.rs  affine_layers.rs  api_wrapper.rs  auxiliary_capabilities.rs  bias.rs  buffer_config_validator.rs  buffer_map.rs  buffer_map_impl.rs  capabilities.rs  compiled_model.rs  component.rs  copy_layer.rs  (+69 more)
gna-rs/tests/: api_request_lifecycle.rs  instrumentation_usage.rs  kernels_affine.rs  request_state.rs
scripts/: README.md  build_gna.ps1  build_gna.sh  run_load_test_with_gna.ps1  run_load_test_with_gna.sh
src/: backend.rs  instrumentation.rs  lib.rs
src/gna_rs/: mod.rs
src/tests/: instrumentation_usage.rs
tests/: Cargo.toml  api_request_lifecycle.rs  instrumentation_usage.rs  kernels_affine.rs  linux_driver_integration.rs  model_api.rs  request_state.rs
(+281 files in other folders)
