[workspace]
members = ["./", "gna-rs"]

[package]
name = "nanai-gna"
version = "0.1.0"
edition = "2024"
license = "LGPL-2.1"

[dependencies]
thiserror = "*"

[build-dependencies]
bindgen = "*"

[dev-dependencies]
clap = { version = "*", features = ["derive"] }

[features]
link_gna = []
rust_backend = []
