[workspace]
members = ["./", "gna-rs"]

[package]
name = "nanai-gna"
version = "0.1.0"
edition = "2024"
license = "LGPL-2.1"

[dependencies]
thiserror = "2"

[build-dependencies]
bindgen = "0.72"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }

[features]
link_gna = []
rust_backend = []
